fix: Make image display not stretched out

--- a/beatmap_collections/static/css/index.css
+++ b/beatmap_collections/static/css/index.css
@@ -423,6 +423,23 @@ a.disabled {
     margin-bottom: 2rem;
 }
 
+.profile-pic-preview {
+    object-fit: cover;
+    width: 200px;
+    height: 200px;
+}
+
+.profile-pic-comment {
+    object-fit: cover;
+    width: 50px;
+    height: 50px;
+}
+
+.cover-image-preview {
+    object-fit: cover;
+    width: 200px;
+}
+
 @media screen and (min-width: 992px) {
     .profile-page-pic {
         width: 211px;
